# llm-facade.bs.py

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  renovate.json
.github/: copilot-instructions.md
.github/workflows/: main.yml
src/llm_facade/: gemma3.py  llm_config.py  llm_facade.py  qwen3.py
tests/: conftest.py  test_foo.py  test_gemma3.py  test_llm_config.py  test_llm_config_validation.py  test_llm_facade.py  test_qwen3.py  test_qwen3_fixed.py  test_version.py
